@@ -1,3 +1,7 @@
+Sat May 09 12:59:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchclient/client.py: use version prefix, and the right HTTP method.
+
 Sat May 09 08:18:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchclient/__init__.py,flax/searchclient/client.py,
